--- a/style.css
+++ b/style.css
@@ -64,39 +64,34 @@ header{
 	color: rgb(47, 46, 46, 0.8);
 }	
 
-
-main{
-	background: rgba(255, 215, 153, 0.8) url("img/woman.png");
-	background-size: 1200px;
-	background-position: -250px 35px;
-	background-repeat: no-repeat;
 	
+.action .woman img{
+	margin-top: 23.5%;
+    width: 100%;
 }
 main .action{
-	margin-left: 40%;
 	display: flex;
-	justify-content: space-between;
-	min-width: 45%;
-	max-width: 50%;
+	justify-content: space-around;
 	height: 710px;
 }
 
 main .action > div{
-	min-width: 45%;
-	max-width: 50%;
-	background: red;	
+	min-width: 25%;
+	max-width: 30%;	
 }
+
 
 .action .timer{
 	background: rgba(255, 215, 153, 1);
 	border-radius: 10px;
 	align-self: center;
 	text-align: center;
-		padding-top: 100px;
-		margin-left: 30px;
+	height: 68.3%;
+	
+
 }
 .action .timer .wrapper{
-	padding-top: -50px;
+
 	display: block;
 }
 .action .timer .wrapper h1{
@@ -115,7 +110,7 @@ main .action > div{
 }
 
 .action .timer .wrapper p span{
-	width: 100px;
+	width: 10%;
 	font-size: 40px;
 	text-decoration: underline;
 	color: lightblue;
@@ -126,21 +121,15 @@ main .action > div{
 }
 
 .action .form{
-	height: 200px;
-	min-width: 45%;
-	max-width: 50%;
+	height: 40%;
 	background: rgba(255, 215, 153, 1);
 	border-radius: 10px;
 	padding: 100px 0px;
 	align-self: center;
 	display: block;
-	margin-left: 150px;
+	
 }
-.main .form {
 
-	padding: 10px 20px;
-	display: block;
-}
 fieldset{
 	border-radius: 10px;
 	border: 5px solid white;
@@ -149,7 +138,7 @@ input{
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
 	margin-left: 8px;
-	margin-top: 15px;
+	margin-top: 7%;
 	height: 20px;
 	color: purple;
 	background: white;
@@ -159,7 +148,6 @@ input{
 }
 input[type="submit"]{
 	height: 30px;
-	margin-left: 30px;
 	transition-duration: 0.6s;
 }
 input[type="submit"]:hover{
