--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+ scroll-behavior: smooth; 
+}
 body{
 	color: black;
 	padding: 0;
@@ -10,29 +13,37 @@ a{
 }
 
 header{
+	align-items: center;
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
 	min-width: 100%;
 	height: 300px;
 	background-color: rgba(229, 18, 39, 0.9);
 }
-
-.main-header .logo img {
- margin-left: 10%;
-	margin-top: 10%;
-	width: 60%;
+.main-header .logo{
+	align-self: stretch;
+}
+.main-header .logo .relative{
+	position: relative;
+	min-width: 100%;
+	min-height: 100%;
+}
+.main-header .logo .relative img {
+ 	position: absolute;
+	left: 20%;
+	bottom: 50%;
+    width: 60%;
+    height: auto;
 }
 
-.main-header p{
-	color: white
-}
+
+
 .main-header div{
-	min-height: 80%;
+	min-height: 100%;
 	min-width: 30%;
 	max-width: 33%;
-
 }
+
 .navigation{
 	display: flex;
 	flex-direction: column;
@@ -58,20 +69,48 @@ header{
 	font-size: 25px;
 	color: rgb(47, 46, 46, 0.8);
 }	
+.menu{
+	box-sizing: border-box;
+	padding: 2% 0%;
+	align-self: stretch;
+
+}
+.menu .wrapper{
+	box-sizing: border-box;
+	padding-top: 12%;
+	min-width: 90%;
+	min-height: 100%;
+}
+.menu .wrapper ul li{
+	transition-property: transform;
+	transition-duration: 0.4s;
+}
+.menu .wrapper ul li:hover{
+transform: scale(1.1);
+} 
+.menu .wrapper ul{
+	
+	display: flex;
+	font-size: 20px;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	list-style: none;
+}
+.menu .wrapper ul li{
+	
+}
 main .action{
-	background: rgb(255, 215, 153, 0.0);
+	background: rgb(255, 215, 153, 0.5);
 	display: flex;
 	justify-content: space-around;
-	height: 710px;
+	height: 720px;
 }
 
 main .action > div{
 	min-width: 26%;
 	max-width: 30%;	
 }
-.action .woman{
-	flex-shrink: 0.5;
-}
+
 .action .woman .relative{
 	position: relative;
 	min-width: 100%;
@@ -84,7 +123,6 @@ main .action > div{
     width: 100%;
     height: auto;
 }
-
 .action .timer{
 	background: rgba(255, 215, 153, 1);
 	border-radius: 10px;
@@ -93,20 +131,20 @@ main .action > div{
 	height: 68.3%;
 }
 .action .timer .wrapper{
-margin: 10% 10%;
-margin-top: 20%
+	color: black;
+	margin: 10% 10%;
+	margin-top: 20%
 }
 .action .timer .wrapper h1{
-	color: white;
 	text-transform: uppercase;
 	font-size: 26px;
 	
 }
 #timer{
+	color: black;
 	text-transform: none;
 }
 .action .timer .wrapper p{
-	color: white;
 	text-transform: uppercase;
 	font-size: 30px;
 }
@@ -121,7 +159,6 @@ margin-top: 20%
 	text-decoration: line-through;
 	color: purple;
 }
-
 .action .form{
 	flex-shrink: 0.5;
 	box-sizing: border-box;
@@ -131,7 +168,7 @@ margin-top: 20%
 	padding-top: 3%;
 	align-self: center;
 	display: block;	
-	color: white;
+	color: black;
 	font-size: 125%;
 }
 fieldset{
@@ -143,7 +180,7 @@ input{
 	font-size: 80%;
 	margin-top: 7%;
 	height: 20px;
-	color: purple;
+	color: black;
 	background: white;
 	border-radius: 3px;
 	border: 0px;
@@ -176,7 +213,7 @@ input[type="tel"]:hover{
 	transform: scale(1.1);
 }
 textarea{
-	color: purple;
+	color: black;
 	border: none;
 	border-radius: 6px;
 	transition-duration: 0.6s;
@@ -209,6 +246,9 @@ main .map{
 
 
 
+	
+
+
 footer{
 	display: flex;
 	justify-content: space-between;
@@ -219,7 +259,6 @@ footer{
 }
 
 footer div{
-
 	min-width: 30%;
 	min-height: 100%;
 
