--- a/style.css
+++ b/style.css
@@ -43,7 +43,13 @@ header{
 	min-width: 30%;
 	max-width: 33%;
 }
-
+.navigation div:first-child{
+	transition-property: transform;
+	transition-duration: 0.5s;
+}
+.navigation div:first-child:hover{
+	transform: scale(1.1);
+}
 .navigation{
 	display: flex;
 	flex-direction: column;
@@ -150,6 +156,20 @@ main .action > div{
 	font-size: 40px;
 	text-decoration: underline;
 	color: lightblue;
+	animation-name: go;
+	animation-iteration-count: infinite;
+	animation-duration: 0.6s;
+	animation-direction: alternate;
+}
+@keyframes go{
+	from{
+		color: lightblue;
+		font-size: 40px;
+	}
+	to{
+		color: yellow;
+		font-size: 50px;
+	}
 }
 .action .timer .wrapper .last-price{
 	text-decoration: line-through;
@@ -221,18 +241,133 @@ textarea{
 
 
 main .reasons{
+	box-sizing: border-box;
+	padding: 1.5% 0%;
+	text-align: center;
 	min-width: 100%;
-	height: 500px;
+	height: 550px;
 	background: rgba(165, 174, 134, 0.8);
 }
+.reasons h2{
+	display: inline;
+	border-bottom: 3px solid white;
+	font-size: 36px;
+	color: white;
+	padding: 0;
+	margin: 0;
+}
+.reasons .icons{
+	margin: 0% 5%;
+	margin-left: 7.5%;
+	min-height: 90%;
+	min-width: 90%;
+	box-sizing: border-box;
+	padding: 1% 5%;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-around;
 
+}
+.reasons .icons > div{
+	flex-basis: 33%;
+	box-sizing: border-box;
+	padding: 0% 5%;	
+	transition-property: transform;
+	transition-duration: 0.5s
+}
+.reasons .icons > div:hover{
+	transform: scale(1.1);
+}
 
+.reasons .icons .icon1 div{
+	height: 100%;
+	padding: 10% 10%;
+	width: 70%; 
+	box-sizing: border-box;
+	background: rgba(165, 174, 134, 1) url('img/community.png');
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	background-position: cover;
+	background-size: 32%;
+	border-radius: 2em;
+	vertical-align: bottom;
+}
 
+.reasons .icons .icon2 div{
+	height: 100%;
+	padding: 10% 10%;
+	width: 70%; 
+	box-sizing: border-box;
+	background: rgba(165, 174, 134, 1) url('img/action.png');
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	background-position: cover;
+	background-size: 35%;
+	border-radius: 2em;
+	vertical-align: bottom;
+}
+.reasons .icons .icon3 div{
+	height: 100%;
+	padding: 10% 10%;
+	width: 70%; 
+	box-sizing: border-box;
+	background: rgba(165, 174, 134, 1) url('img/notes.png');
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	background-position: cover;
+	background-size: 35%;
+	border-radius: 2em;
+	vertical-align: bottom;
+}
+.reasons .icons .icon4 div{
+	height: 100%;
+	padding: 10% 10%;
+	width: 70%; 
+	box-sizing: border-box;
+	background: rgba(165, 174, 134, 1) url('img/time.png');
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	background-position: cover;
+	background-size: 32%;
+	border-radius: 2em;
+	vertical-align: bottom;
+}
+.reasons .icons .icon5 div{
+	height: 100%;
+	padding: 10% 10%;
+	width: 70%; 
+	box-sizing: border-box;
+	background: rgba(165, 174, 134, 1) url('img/first.png');
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	background-position: cover;
+	background-size: 32%;
+	border-radius: 2em;
+	vertical-align: bottom;
+}
+.reasons .icons .icon6 div{
+	height: 100%;
+	padding: 10% 10%;
+	width: 70%; 
+	box-sizing: border-box;
+	background: rgba(165, 174, 134, 1) url('img/glasses.png');
+	background-repeat: no-repeat;
+	background-position: 50% 20%;
+	background-position: cover;
+	background-size: 35%;
+	border-radius: 2em;
+	vertical-align: bottom;
+}
 
-
-
-
-
+.reasons .icons div div p{
+	color: white;
+	font-size: 16px;
+	box-sizing: border-box;
+	padding-top: 45%;
+	margin-bottom: 0%;
+	margin: 0;
+}
 
 main .map{
 	min-width: 100%;
